--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,16 @@ spring.jpa.show-sql=true
 spring.security.user.name=admin
 spring.security.user.password=123456
 
+## Credenciais login
+credential.username=RNiPd2Kap4SAP
+credential.password=2d7GfGjuk6ZCpEXonFjOWFxIcYZrrZDR
+
+credential.jwt.secret=9UBy;Fj|6_mtM`K):mzx|5TVHKreg0DwB2%g4%yC[-+T^'2G H?g*q;}M^$-7MGjmH@O7IJDjo~^ENUBg]5(3A=l[6xg_7O/o{it?l/!PFeOi5qHSfR8>so
+credential.jwt.expiration=86400000
+
+api.public-key=bcf55/*1234*/BCF55
+posmei.jwt.expiration=7200000 
+posmei..jwt.secret=9UBy;Fj|6_mtM`K):mzx|5TVHKreg0DwB2%g4%yC[-+T^ '2G H?g*q;}M^$-7MGjmH@O7IJDjo~^ENUBg]5(3A=l[6xg_7O/o{it?l/!PFeOi5qHSfR8>so
+
 
 
