--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,10 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
 
 		
 	</dependencies>
