--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,33 @@
 spring.application.name=FinIOAPI
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/u323187073_posmei?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Recife
-#spring.datasource.username=root
-#spring.datasource.password=mnd0266
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://localhost:5432/u323187073_posmei
-
-# Usuï¿½rio e senha definidos no docker-compose
-spring.datasource.username=root
-spring.datasource.password=mnd0266
-
-# Classe do driver JDBC do PostgreSQL
+# Postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/bd_fineio
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Configuraï¿½ï¿½es JPA/Hibernate (opcional)
-spring.jpa.hibernate.ddl-auto=update
+# JPA/Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none    
 spring.jpa.show-sql=true
 
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.schemas=public
+spring.flyway.group=true
+spring.flyway.out-of-order=false
+# NÃO precisa baselineOnMigrate se o schema estiver realmente vazio
+
+# Segurança (mantive os seus)
 spring.security.user.name=admin
 spring.security.user.password=123456
 
-## Credenciais login
 credential.username=RNiPd2Kap4SAP
 credential.password=2d7GfGjuk6ZCpEXonFjOWFxIcYZrrZDR
-
 credential.jwt.secret=9UBy;Fj|6_mtM`K):mzx|5TVHKreg0DwB2%g4%yC[-+T^'2G H?g*q;}M^$-7MGjmH@O7IJDjo~^ENUBg]5(3A=l[6xg_7O/o{it?l/!PFeOi5qHSfR8>so
 credential.jwt.expiration=86400000
 
 api.public-key=bcf55/*1234*/BCF55
-posmei.jwt.expiration=7200000 
-posmei..jwt.secret=9UBy;Fj|6_mtM`K):mzx|5TVHKreg0DwB2%g4%yC[-+T^ '2G H?g*q;}M^$-7MGjmH@O7IJDjo~^ENUBg]5(3A=l[6xg_7O/o{it?l/!PFeOi5qHSfR8>so
-
-
-
+posmei.jwt.expiration=7200000
+posmei.jwt.secret=9UBy;Fj|6_mtM`K):mzx|5TVHKreg0DwB2%g4%yC[-+T^ '2G H?g*q;}M^$-7MGjmH@O7IJDjo~^ENUBg]5(3A=l[6xg_7O/o{it?l/!PFeOi5qHSfR8>so
